<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!-- This is to change what type of news story to search for -->
    <EditTextPreference
        android:defaultValue="@string/settings_content_default"
        android:inputType="textAutoCorrect"
        android:key="@string/settings_content_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_content_label"
        android:hint="@string/story_hint"/>

    <!-- This is to change the max stories to display. -->
    <EditTextPreference
        android:defaultValue="@string/settings_max_news_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_max_news_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_max_news_label" />

</PreferenceScreen>